# recursive-math

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-tests.yml
environment/: requirements.txt  yl.yml
src/: __init__.py  common_functions.py  iterative_constants.py  progress.py  series.py
src/recursive_math/: __init__.py  common_functions.py  iterative_constants.py  series.py
src/utils/: iterative_constants.py
tests/: common_functions_test.py  iterative_constants_test.py  loading_bar_test.py  series_test.py
