# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "recursive_math"
version = "1.0.0"
description = "Methods for recursively solving coeifficents."
readme = "README.md"
authors = [{ name = "Andres Hyer", email = "andreshyer@gmail.com" }]
license = { file = "MIT License" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["neo4j"]
dependencies = [
    "neo4j>=4.3.2",
    "tqdm>=4.10.0"
]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/andreshyer/recursive-math"

[tool.setuptools.packages.find]
where = ["src"]
