# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "recursive_math"
version = "1.0.0"
description = "Methods for recursively solving coeifficents."
readme = "README.md"
license = "MIT"
authors = ["Andres Hyer <andreshyer@gmail.com>"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["neo4j"]
dependencies = [
    "numpy",
    "numba",
    "tqdm"
]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/andreshyer/recursive-math"

[tool.setuptools.packages.find]
where = ["src"]
